# saudi-ai-privacy-gateway

./: .gitignore  404.html  CHANGELOG.md  Makefile  PROJECT_REVIEW.md  README.ar.md  README.md  RELEASE.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml  tests.yml
REFERENCES/: index.html
adr/: index.html
adr/0001-normalize-before-detect/: index.html
adr/0002-single-package/: index.html
adr/0003-opt-in-plugin-discovery/: index.html
adr/0004-api-stability-strategy/: index.html
adr/0005-unicode-normalization-philosophy/: index.html
adr/0006-detector-validator-separation/: index.html
api-stability/: index.html
benchmarks/: index.html  run.py
brand/: index.html
cli/: index.html
compatibility/: index.html
config/: index.html
detector-guide/: index.html
detectors/: index.html
docs/: api-stability.md  brand.md  cli.md  compatibility.md  config.md  middleware.md  presidio.md  threat-model.md
docs/adr/: 0002-single-package.md
examples/: tabayyan_demo.ipynb
examples/fastapi_llm_guard/: README.md  app.py  config.py  sample_requests.http  schemas.py  services.py
examples/fastapi_llm_guard/tests/: test_app.py
faq/: index.html
fuzz/seeds/: newlines_and_tabs
middleware/: index.html
playground/: README.md  requirements.txt
playground/static/: styles.css
playground/templates/: index.html
plugins/: index.html
presidio/: index.html
search/: search_index.json
showcase/: index.html
src/tabayyan/: __init__.py  cli.py  config.py  middleware.py  redaction.py  streaming.py  vault.py
src/tabayyan/detectors/: registry.py  saudi.py
src/tabayyan/integrations/: fastapi.py  presidio.py
tests/: synthetic.py  test_cli.py  test_config.py  test_fastapi_integration.py  test_middleware.py  test_packaging_docs.py  test_plugins.py  test_properties.py  test_provider_contracts.py  test_redaction.py  test_saudi.py  test_streaming.py  test_tokenize.py  test_vault.py
threat-model/: index.html
