[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tabayyan-privacy"
version = "0.10.0"
description = "Saudi-aware PII detection & redaction for LLM pipelines. Local-first, zero telemetry."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Tabayyan contributors" }]
keywords = ["pii", "saudi", "ksa", "llm", "privacy", "pdpl", "ndmo", "redaction", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Natural Language :: Arabic",
    "Natural Language :: English",
    "Topic :: Security",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "build>=1.0",
    "python-stdnum>=1.19",
    "cryptography>=42",
    "hypothesis>=6",
    "fastapi>=0.110",
    "httpx>=0.27",
]
docs = ["mkdocs-material>=9"]
presidio = ["presidio-analyzer>=2.2"]
crypto = ["cryptography>=42"]
fastapi = [
    "fastapi>=0.110",
]

[project.urls]
Homepage = "https://github.com/blackice2090/saudi-ai-privacy-gateway"
Documentation = "https://github.com/blackice2090/saudi-ai-privacy-gateway/tree/main/docs"
Changelog = "https://github.com/blackice2090/saudi-ai-privacy-gateway/blob/main/CHANGELOG.md"
Source = "https://github.com/blackice2090/saudi-ai-privacy-gateway"
Issues = "https://github.com/blackice2090/saudi-ai-privacy-gateway/issues"

[project.scripts]
tabayyan = "tabayyan.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tabayyan"]

# Explicit sdist manifest: without it, hatchling sweeps in everything the
# repo-level .gitignore does not exclude — including untracked local files
# (caches, agent settings, notes) when building from a working tree. The
# allowlist makes sdist contents deterministic across environments.
[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
    "docs",
    "examples",
    "benchmarks",
    "fuzz",
    "playground",
    "README.md",
    "README.ar.md",
    "CHANGELOG.md",
    "RELEASE.md",
    "LICENSE",
    "mkdocs.yml",
    "Makefile",
    "Dockerfile",
    ".dockerignore",
    ".pre-commit-config.yaml",
    ".pre-commit-hooks.yaml",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py39"